# Equal-Size-Spectral-Clustering

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  Pipfile  README.md  example1.py  example2.py  main.py  pyproject.toml  showcase_image_annotation_with_detic.ipynb
.github/workflows/: bump-version.yml  publish.yml  test.yml
datasets/: restaurants_in_amsterdam.csv
elsara/: __init__.py  spectral_equal_size_clustering.py  visualisation.py
source_code/: spectral_equal_size_clustering.py  spectral_esc.py  utils.py  visualisation.py
tests/: README.md  test_spectral_equal_size_clustering.py
